# process-alert

./: .gitignore  LICENSE  README.md  TODO  logger.py  pid.py  process.py  process_cli.py  process_name.py  process_pid.py  pyproject.toml  requirements.txt
config/: process-alert.conf.sample
notifications/: alertmanager.py  desktop_notify.py  email.py  matrix.py  mattermost.py
utils/: bcolors.py  logger.py  matrix.py  parse_config.py  process_lookup_infos.py  validate_options.py
watcher/: watch_proc.py
